5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1865_1536.log
== TEST (2019-07-04 10:38:19) 
-- CODE:
x = float(input("numero: "))
t = int(input("numero: "))

p = 1
d = 1
cont = 0
i = 0
while (x<t and -1<x and x<=-1 and k>0):
	ln = x**p/d
	p = p + 1
	d = d + 1
	ln = ln +(-1)
	print(ln)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:47) 
-- CODE:
x = float(input("numero: "))
t = int(input("numero: "))

p = 1
d = 1
cont = 0
i = 0
while (x<t and -1<x and x<=-1 and k>0):
	ln = x**p/d
	p = p + 1
	d = d + 1
	ln = ln +(-1)
	print(ln)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:39:45) 
-- CODE:
#x = float(input("numero: "))
#t = int(input("numero: "))

p = 1
d = 1
cont = 0
i = 0
while (x<t and -1<x and x<=-1 and k>0):
x = float(input("dcken: "))
t = int(input("cbnjke: "))	
	ln = x**p/d
	p = p + 1
	d = d + 1
	ln = ln +(-1)
	print(ln)
-- ERROR:
File "XXXX", line 9
    x = float(input())
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:06) 
-- CODE:
#x = float(input("numero: "))
#t = int(input("numero: "))
x = ""
t = ""
p = 1
d = 1
cont = 0
i = 0
while (x<t and -1<x and x<=-1 and k>0):
x = float(input("dcken: "))
t = int(input("cbnjke: "))	
	ln = x**p/d
	p = p + 1
	d = d + 1
	ln = ln +(-1)
	print(ln)
-- ERROR:
File "XXXX", line 10
    x = float(input())
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:49:16) 
-- CODE:
x = float(input("numero: "))
t = int(input("numero: "))

p = 1
d = 1
cont = 0
i = 0
while (x<t and -1<x and x<=-1 and k>0):

	ln = x**p/d
	p = p + 1
	d = d + 1
	ln = ln +(-1)
	print(ln)
-- ERROR:
File "XXXX", line 10
    x = float(input())
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:49:43) 
-- CODE:
x = float(input("numero: "))
t = int(input("numero: "))

p = 1
d = 1
cont = 0
i = 0
while ( -1<x and x<=-1 and k>0):

	ln = x**p/d
	p = p + 1
	d = d + 1
	ln = ln +(-1)
	print(ln)
-- ERROR:
File "XXXX", line 10
    x = float(input())
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:52:42) 
-- CODE:
x = float(input("numero: "))
t = int(input("numero: "))

p = 1
d = 1
cont = 0
i = 0
while ( -1<x and x<=-1 and k>0):
	ln = x**p/d
	p = p + 1
	d = d + 1
	ln = ln +(-1)
	cont = cont + 1
	print(round(ln,10))
-- ERROR:
File "XXXX", line 10
    x = float(input())
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:52:51) 
-- CODE:
x = float(input("numero: "))
t = int(input("numero: "))

p = 1
d = 1
cont = 0
i = 0
while ( -1<x and x<=-1 and k>0):
	ln = x**p/d
	p = p + 1
	d = d + 1
	ln = ln +(-1)
	cont = cont + 1
	print(round(ln,10))
-- ERROR:
File "XXXX", line 10
    x = float(input())
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:53:24) 
-- CODE:
x = float(input("numero: "))
t = int(input("numero: "))
ln = 0
p = 1
d = 1
cont = 0
i = 0
while ( -1<x and x<=-1 and k>0):
	ln = x**p/d
	p = p + 1
	d = d + 1
	ln = ln +(-1)

	
	print(round(ln,10))
-- ERROR:
File "XXXX", line 10
    x = float(input())
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
